// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register component snapshot test should display error messages 1`] = `
<Grid
  bsClass="container"
  className="register-container"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      sm={6}
      smOffset={3}
      xs={12}
    >
      <form
        className="register"
      >
        <FormGroup
          bsClass="form-group"
        >
          <p
            className="error-message"
          >
            testError
          </p>
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Email Address
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="email-input"
            componentClass="input"
            name="email"
            onChange={[MockFunction]}
            placeholder="E.g. john@doe.com"
            value="test@email.com"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="password-input"
            componentClass="input"
            name="password"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Confirm Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="passwordConf-input"
            componentClass="input"
            name="passwordConf"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <Button
            active={false}
            block={true}
            bsClass="btn"
            bsStyle="primary"
            className="register-button"
            disabled={false}
            onClick={[MockFunction]}
            type="submit"
          >
            Register
          </Button>
          <div
            className="already-registered-text"
          >
            Already have an account? 
            <Link
              replace={false}
              to="/account/login"
            >
              Sign in here.
            </Link>
          </div>
        </FormGroup>
      </form>
    </Col>
  </Row>
</Grid>
`;

exports[`Register component snapshot test should match snapshot 1`] = `
<Grid
  bsClass="container"
  className="register-container"
  componentClass="div"
  fluid={false}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      sm={6}
      smOffset={3}
      xs={12}
    >
      <form
        className="register"
      >
        <FormGroup
          bsClass="form-group"
        >
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Email Address
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="email-input"
            componentClass="input"
            name="email"
            onChange={[MockFunction]}
            placeholder="E.g. john@doe.com"
            value="test@email.com"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="password-input"
            componentClass="input"
            name="password"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <ControlLabel
            bsClass="control-label"
            srOnly={false}
          >
            Confirm Password
          </ControlLabel>
          <FormControl
            bsClass="form-control"
            className="passwordConf-input"
            componentClass="input"
            name="passwordConf"
            onChange={[MockFunction]}
            placeholder="E.g. 124!Jigzx"
            type="password"
            value="testPassword"
          />
          <Button
            active={false}
            block={true}
            bsClass="btn"
            bsStyle="primary"
            className="register-button"
            disabled={false}
            onClick={[MockFunction]}
            type="submit"
          >
            Register
          </Button>
          <div
            className="already-registered-text"
          >
            Already have an account? 
            <Link
              replace={false}
              to="/account/login"
            >
              Sign in here.
            </Link>
          </div>
        </FormGroup>
      </form>
    </Col>
  </Row>
</Grid>
`;
